--- a/styles.css
+++ b/styles.css
@@ -162,6 +162,11 @@ h1, h2, h3, h4, h5,h6, p, a, span{
     width: 36px;
 }
 
+.container-button img {
+    width: 22px;
+    height: 22px;
+}
+
 .description {
     text-align: center;
     margin-bottom: 30px;
@@ -214,11 +219,33 @@ h1, h2, h3, h4, h5,h6, p, a, span{
     color: var(--color-secundario);
 }
 
-.comments-section {
+.foro-section {
     margin-bottom: 30px;
+    background-color: var(--color-primario);
+    border-radius: 8px;
+    box-sizing: border-box;
+    padding: 28px;
 }
 
-.comment-div-input img{
+.container-titulo-foro{
+    display: flex;
+    align-items: center;
+}
+
+.container-titulo-foro h3{
+    font-size: var(--font-size-m);
+}
+
+.container-titulo-foro span{
+    font-size: var(--font-size-m);
+}
+
+.container-titulo-foro span{
+    margin-right: 4px;
+}
+
+
+.foto-perfil{
     width: 50px;
     border-radius: 50%;
 }
@@ -256,6 +283,7 @@ h1, h2, h3, h4, h5,h6, p, a, span{
 
 .comment-div {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     margin-bottom: 20px;
     background-color: var(--color-primario-oscuro);
@@ -264,8 +292,19 @@ h1, h2, h3, h4, h5,h6, p, a, span{
     border: 1px solid var(--color-secundario);
 }
 
-.comment-div img {
+.comment-container-perfil{
+    display: flex;
+    align-items: center;
+    margin-bottom: 8px;
+}
+
+.comment-container-perfil h6{
+    margin: 0;
+}
+
+.comment-container-perfil img {
     width: 50px;
+    height: 50px;
     border-radius: 50%;
     margin-right: 20px;
 }
@@ -1279,6 +1318,21 @@ h2.titulo-vj{
         margin: 8px 8px 16px 0px;
         flex-direction: row-reverse;
     }
+
+    .comment-fecha{
+        margin: 0 0 0 12px;
+        font-size: var(--font-size-xs);
+    }
+
+    .comment-text{
+        font-size: var(--font-size-xs);
+        margin-top: 0px;
+        margin-left: 70px;
+    }
+
+    .comment-container-perfil h6{
+        font-size: var(--font-size-s);
+    }
 }
 
 /* ----------------FOOTER----------------------- */
@@ -1383,9 +1437,10 @@ h2.titulo-vj{
         margin: 0px auto;
     }
 
-    .comments-section{
+    .foro-section{
         width: 80%;
-        margin: 0px auto;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .comment-div-input-textarea-div{
@@ -1400,6 +1455,7 @@ h2.titulo-vj{
     .comment-div-input-button-div{
         margin-right: 0px;
     }
+    
 }
 
 /* (pantallas pequeñas de escritorio) */
@@ -1435,6 +1491,14 @@ h2.titulo-vj{
     
     .busqueda_container{
         width: 20%;
+    }
+
+    .comment-container-perfil h6{
+        font-size: var(--font-size-m);
+    }
+
+    .comment-text{
+        font-size: var(--font-size-s);
     }
 }
 
@@ -1504,20 +1568,24 @@ h2.titulo-vj{
     }
 
     .tableroyanuncios-div{
-        height: 60vh;
+        align-items: center;
+    }
+
+    .tablero-div img{
+        width: 100%;
     }
 
     .anuncio-div {
         display: block;
-        width: 15%;
-        height: 90%;
+        width: 18%;
+        height: 400px;
         margin: 0 16px;
     }
 
     .anuncio-div img {
         width: 100%; /* Las imágenes de los anuncios ocuparán todo el ancho del contenedor */
         height: 100%; /* Forzar la imagen a estirarse para ocupar el 90% de la altura del tablero */
-        object-fit: fill; /* Permite que la imagen se deforme para llenar el espacio */
+        object-fit: cover;
     }
 
     .buttons-div{
