--- a/styles.css
+++ b/styles.css
@@ -1354,8 +1354,11 @@ h2.titulo-vj{
 }
 
 .custom-footer {
-   background-color: #2771CD;
-   
+    background-color: #2771CD;
+    width: 100%; /* Asegura que el footer cubra el 100% del ancho */
+    padding: 20px;
+    color: #ffffff;
+    overflow: hidden; /* Evita que se rompa el diseño al redimensionar */
 }
 
 .custom-footer-col {
@@ -1528,8 +1531,10 @@ h2.titulo-vj{
     }
 
     .custom-footer-col {
-        width: 48%; /* Dos columnas por fila */
+        width: 100%; /* Dos columnas por fila */
     }
+
+ 
 
     
 }
@@ -1566,7 +1571,7 @@ h2.titulo-vj{
     }
     
     .busqueda_container{
-        width: 20%;
+        width: 5%;
     }
 }
 
@@ -1702,11 +1707,5 @@ h2.titulo-vj{
         border-radius: 25px;
     }
 
-    .footer-section h2{
-        font-size: 18px;
-    }
-
-    .footer-section li{
-        font-size: 14px;
-    }
+    
 }
