--- a/styles.css
+++ b/styles.css
@@ -1348,29 +1348,22 @@ h2.titulo-vj{
 .custom-container {
    max-width: 1170px;
    margin: auto;
-   padding: 0 15px;
 }
 
 .custom-row {
-    display: flex;
-    
-    gap: 20px; /* Espacio entre columnas */
-    justify-content: space-between;
+   display: flex;
    
 }
 
 .custom-footer {
-    background-color: #2771CD;
-    width: 100%; /* Asegura que el footer cubra el 100% del ancho */
-    padding: 20px;
-    color: #ffffff;
-    overflow: hidden; /* Evita que se rompa el diseño al redimensionar */
+   background-color: #2771CD;
+   
 }
 
 .custom-footer-col {
     width: 25%;
     padding: 0 15px;
-   
+    
     flex-direction: column;
    
     
@@ -1389,7 +1382,7 @@ h2.titulo-vj{
    content: '';
    position: absolute;
    left: 0;
-   bottom: -5px;
+   bottom: -10px;
    background-color: #e91e63;
    height: 2px;
    width: 100px;
@@ -1397,15 +1390,6 @@ h2.titulo-vj{
 
 .custom-footer-col ul {
    list-style: none;
-   padding-left: 0;
-}
-
-
-
-/* Mobile-first: configuración por defecto */
-.custom-footer-col {
-    width: 100%; /* Una columna por fila en pantallas pequeñas */
-    margin-bottom: 30px;
 }
 
 .custom-footer-col ul li:not(:last-child) {
@@ -1419,24 +1403,23 @@ h2.titulo-vj{
    font-weight: 300;
    display: block;
    transition: all 0.3s ease;
-   
+   padding-left: 0; /* Alinea los enlaces con el título */
 }
 
 
 .custom-footer-col ul li a:hover {
    color: #ffffff;
-   padding-left: 5px;
+   padding-left: 8px;
 }
 .custom-social-links {
-    margin-top: auto;
-    display: flex;
-    gap: 10px;
+    margin-top: auto; /* Empuja los enlaces sociales hacia la parte inferior del contenedor */
  }
 .custom-social-links a {
    display: inline-block;
    height: 40px;
    width: 40px;
    background-color: rgba(255, 255, 255, 0.2);
+   margin: 0 10px 10px 0;
    text-align: center;
    line-height: 40px;
    border-radius: 50%;
@@ -1450,25 +1433,17 @@ h2.titulo-vj{
 }
 
 /* Responsive */
-/* Pantallas medianas (550px - 767px) */
-@media (min-width: 550px) and (max-width: 767px) {
-    .custom-footer-col {
-        width: 48%; /* Dos columnas por fila */
-    }
+@media (max-width: 767px) {
+   .custom-footer-col {
+      width: 50%;
+      margin-bottom: 30px;
+   }
 }
 
-/* Pantallas grandes (768px - 1024px) */
-@media (min-width: 768px) {
-    .custom-footer-col {
-        width: 24%; /* Cuatro columnas por fila en pantallas grandes */
-    }
-}
-
-/* Pantallas extra grandes (1025px en adelante) */
-@media (min-width: 1025px) {
-    .custom-footer-col {
-        width: calc(25% - 20px); /* Ajuste para mantener el espacio entre columnas */
-    }
+@media (max-width: 574px) {
+   .custom-footer-col {
+      width: 100%;
+   }
 }
 
 
@@ -1518,9 +1493,10 @@ h2.titulo-vj{
         margin: 0px auto;
     }
 
-    .comments-section{
+    .foro-section{
         width: 80%;
-        margin: 0px auto;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .comment-div-input-textarea-div{
@@ -1535,13 +1511,6 @@ h2.titulo-vj{
     .comment-div-input-button-div{
         margin-right: 0px;
     }
-
-    .custom-footer-col {
-        width: 100%; /* Dos columnas por fila */
-    }
-
- 
-
     
 }
 
@@ -1663,30 +1632,31 @@ h2.titulo-vj{
         font-size: var(--font-size-xl);
     }
 
-    .titulos-section-breadscrums-div p{
-        font-size: var(--font-size-s);
-    }
 
     .tableroyanuncios-div{
-        height: 60vh;
+        align-items: center;
+    }
+
+    .tablero-div img{
+        width: 100%;
     }
 
     .anuncio-div {
         display: block;
-        width: 15%;
-        height: 90%;
+        width: 18%;
+        height: 400px;
         margin: 0 16px;
     }
 
     .anuncio-div img {
         width: 100%; /* Las imágenes de los anuncios ocuparán todo el ancho del contenedor */
         height: 100%; /* Forzar la imagen a estirarse para ocupar el 90% de la altura del tablero */
-        object-fit: fill; /* Permite que la imagen se deforme para llenar el espacio */
+        object-fit: cover;
     }
 
     .buttons-div{
         position: relative;
-        left: 13.5%;
+        left: 15%;
     }
 
     .description-div h2{
@@ -1751,5 +1721,11 @@ h2.titulo-vj{
         border-radius: 25px;
     }
 
-    
+    .footer-section h2{
+        font-size: 18px;
+    }
+
+    .footer-section li{
+        font-size: 14px;
+    }
 }
